# screenpipe

./: Cargo.toml  config.json  prompt.md
prompt/: prompt.md  prompt2.md  prompt3_full.md  prompt3_noaudioscreenshot.md
screenpipe-app-tauri/: package-lock.json  package.json
screenpipe-app-tauri/components/: screenpipe-status.tsx  settings.tsx
screenpipe-app-tauri/scripts/: pre_build.js  pre_build.mjs
screenpipe-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
screenpipe-app-tauri/src-tauri/src/: main.rs
screenpipe-core/src/: file_watcher.rs
screenpipe-file-watch/: Cargo.toml
screenpipe-file-watch/src/: lib.rs
