[package]
name = "screenpipe-file-watch"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
notify = "5.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
image = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.3.0"
tokio-test = "0.4"

[[bin]]
name = "screenpipe-file-watch"
path = "src/bin/screenpipe-file-watch.rs"